Fix missing space under line

--- a/views/css/front.css
+++ b/views/css/front.css
@@ -673,7 +673,7 @@
 }
 @media (max-width: 767px) {
   .oneyPopin_legal {
-    padding: 0 0 15px;
+    padding: 10px 0 15px;
   }
 }
 .oneyPopin_close {
